2001-12-27  Scott S. Goodwin  <scott@scottg.net>

	* https.tcl: cleaned up the ns_httpspost proc and got rid of the
	debugging statements.

2001-12-12  Scott S. Goodwin  <scott@scottg.net>

	* https.tcl: form.tcl doesn't respect the fact that a boundary
	value declaration may be wrapped in double quotes. It will work
	with this:

          multipart/form-data, boundary=--123456789

        but not this:

          multipart/form-data, boundary="--123456789"

	Changed https.tcl to work with form.tcl (for now).

2001-12-02  Scott S. Goodwin  <scott@scottg.net>

	* config.h: Added the CONFIG_MODULEDIR to create the ModuleDir
	parameter name.

	* init.c: Altered CheckModuleDir so that the config parameter
	ModuleDir can be used to point to somewhere outside of the
	AOLserver directory area. If ModuleDir is specified, the
	CheckModuleDir does *not* try and create the directory for you but
	assumes if you've already got it set up.

	* config.c: Used Ns_MakePath in place of Ns_DStringVarAppend to
	ensure that slashes always appear between path elements when
	ConfigPathDefault constructs a path.

	* init.c: Renamed MakeModuleDir to CheckModuleDir, and instead of
	passing in *server, *module and **dirp, now only *sdPtr is passed
	in.

2001-11-29  Scott S. Goodwin  <scott@scottg.net>
	
	* https.tcl: Added '--' to prepend the boundary markers in
	ns_httpspost. I should have read the MIME RFC, as a boundary
	marker that is declared as

	    --myboundarymarkerhere

	looks like this when actually used:

	    ----myboundarymarkerhere

2001-11-19  Scott S. Goodwin  <scott@scottg.net>

	* https.tcl: Fixed boundary problem when doing multpart form data
	with ns_httpspost. This code:

	    set qsset [ns_set new qsset]
	    ns_set put $qsset user goodwin
	    ns_set put $qsset pass blahblah
	    set page [ns_httpspost \
	       "https://192.168.0.1:8001/test.cgi" "" \
	       $qsset "multipart/form-data"]

	Posts this content:
	